# Cortex

./: .gitignore  CONTEXT_UPDATE_REFERENCE.md  COORDINATOR_CONTEXT_MANAGEMENT.md  README.md  SHARED_CONTEXT_COMPLETE.md  SHARED_CONTEXT_MIGRATION.md  SHARED_CONTEXT_ROUTING_CHANGES.md  WHITEBOARD_COMPLETE.md  WHITEBOARD_MIGRATION.md  WHITEBOARD_ROUTING_CHANGES.md  pyproject.toml  requirements.txt  setup.py  simplified_workflow_design.md  test_context_imports.py  test_conversation_summary.py  test_parallel_tools.py  test_redis_conversation_summary.py  test_shared_context.py  test_shared_context_simple.py  test_whiteboard.py  test_whiteboard_simple.py
cortex/: LLM.py  LLMFunc.py  Llama2_7b_chat.py  __init__.py  agent.py  agent_builder.py  agent_memory.py  backend.py  cli.py  debug.py  embeddings.py  logging_config.py  message.py  redis_agent_memory.py  tool.py
cortex/agent_system/: README.md  __init__.py  composition.py  supervisor.py  task_adapters.py  task_builders.py  task_composition.py  task_executor.py  task_executor_adapters.py  task_executor_builders.py  task_executor_orchestration.py  task_models.py  task_node.py  task_orchestration.py  task_types.py
cortex/backends/: __init__.py  anthropic.py  openai.py  openai_embedding.py
cortex/vector_stores/: __init__.py  factory.py  memory.py
cortex/workflow/: __init__.py  agent.py  engine.py  helpers.py  node.py  policy.py  react_agent.py  runtime.py  state.py  step.py  types.py  workflow_node.py
docs/: cortex_design.md  cortex_usage.md  logging_config.md
examples/: agent_gpt5_simple.py  agent_system_example.py  chroma_example.py  context_update_example.py  coordinator_shared_context_example.py  coordinator_whiteboard_example.py  custom_context_example.py  embedding_example.py  gpt5_mini_streaming_demo.py  hierarchical_agent_system_example.py  logging_config_example.py  message_types_example.py  parallel_tools_example.py  redis_memory_example.py  shared_context_example.py  task_coordinator_system_example.py  vector_store_example.py  whiteboard_example.py  workflow_agent_example.py
intellifun/: LLM.py  LLMFunc.py  Llama2_7b_chat.py  __init__.py  agent.py  agent_builder.py  agent_memory.py  backend.py  cli.py  embeddings.py  logging_config.py  memcached_agent_memory.py  message.py  redis_agent_memory.py  tool.py
intellifun/agent_system/: README.md  __init__.py
tests/: test_context_imports.py  test_conversation_summary.py  test_whiteboard.py  test_whiteboard_simple.py
(+39 files in other folders)
