[tool.poetry]
name = "cortex"
version = "1.2.1"
description = "Cortex Agent Framework - A flexible library for building AI agents with multiple LLM backends"
authors = ["Eric Wong <eric.wong@proenergy.vip>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ProEnergyVIP/cortex"
repository = "https://github.com/ProEnergyVIP/cortex"
keywords = ["AI", "agents", "LLM", "cortex", "agent-framework"]

[tool.poetry.dependencies]
python = "^3.9"
openai = ">=1.107.0"
anthropic = ">=0.40.0"
boto3 = "*"
pydantic = "*"
numpy = "^2.0"  # For efficient numerical operations in embeddings

[tool.poetry.group.chroma]
optional = true

[tool.poetry.group.chroma.dependencies]
chromadb = "^1.0.11"

[tool.poetry.scripts]
cortex = "cortex.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"